ma page portfolio

--- a/indexPorto.html
+++ b/indexPorto.html
@@ -30,6 +30,7 @@
             <li>Contact: 0102621118</li>
             <li>Nationalié : Ivoirienne</li>
             <li>Age: 30 ans</li>
+            <li>Ville de naissance</li>
         </ul>
        
     </section >
