--- a/indexPorto.html
+++ b/indexPorto.html
@@ -31,6 +31,7 @@
             <li>Nationalié : Ivoirienne</li>
             <li>Age: 30 ans</li>
             <li>Ville de naissance</li>
+            <li>Ville actuelle</li>
         </ul>
        
     </section >
